# RLLearn

./: .gitignore  README.md  pyproject.toml
snake/: game.py
snake/spirits/: bullet.py  consts.py  food.py  obstacle.py  snake.py
snake/train/: eval.py  game.py  model.py  train.py  trainer.py
