[tool.poetry]
name = "rl-learn"
version = "0.1.0"
description = "Learning RL"
authors = ["Darren <cyberelfd@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "snake" },
]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.0"
tqdm = "^4.66.5"
tensorboard = "^2.17.1"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"

[tool.poetry.group.dev.dependencies]
numpy = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
